package modeles.passerelle;

import java.io.File;

import modeles.emetteur.RepresentationBinaire;

public class PasserelleFichier {
	
	public void PasserelleFichier() {
		//TODO:
	}
	
	public byte[] lireOctets(File fichier) {
		return null;
		//TODO:
	}
	
	public void ecrireOctets(byte[] octets) {
		//TODO:
	}
	
	public void ecrireOctets(RepresentationBinaire binaire) {
		//TODO:
	}
	
	public File obtenirFichier(String chemin) {
		return null;
		//TODO:
	}
}
